[tool.poetry]
name = "hello-app"
version = "0.1.0"
description = ""
authors = ["Ryan McCloskey <rmccloskey@tssg.org>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
